made website format better for displaying video

--- a/website/views/home.ejs
+++ b/website/views/home.ejs
@@ -31,12 +31,15 @@
           <div class="masthead clearfix">
             <div class="inner">
               <h3 class="masthead-brand">Video Facial Recognizer</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                </ul>
-              </nav>
+              <ul class="nav masthead-nav">
+                <li class="active">
+                	<a href="#">Home</a>
+                </li>
+
+                <li class="active">
+                	<a href="https://github.com/kimjoe32/CS480K-Final-Project">Github</a>
+                </li>
+              </ul>
             </div>
           </div>
 
@@ -45,11 +48,7 @@
             <p class="lead">This is a project for CS480K: Advanced Topics in Cloud Computing.</p>
             <p class="lead">Upload a video file, and it will return a video with faces demarcated</p>
             <p class="lead">Note: put a better description here</p>
-            <p class="lead">
-              <a href="https://github.com/kimjoe32/CS480K-Final-Project" class="btn btn-lg btn-default">Visit our Github</a>
-            </p>
           </div>
-
           <div class="mastfoot">
             <div class="inner">
             </div>
