--- a/website/public/cover.css
+++ b/website/public/cover.css
@@ -1,3 +1,9 @@
+/*/** {
+  border: 1px solid red;
+}*/
+
+
+
 /*
  * Globals
  */
@@ -31,7 +37,7 @@ body {
 }
 body {
   color: #fff;
-  text-align: center;
+  text-align: left;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
@@ -39,7 +45,7 @@ body {
 .site-wrapper {
   display: table;
   width: 100%;
-  height: 100%; /* For at least Firefox */
+  height: 100%;  /*For at least Firefox */
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
@@ -158,6 +164,7 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 700px;
+    width: 95%;
   }
 }
+*/
