--- a/website/views/home.ejs
+++ b/website/views/home.ejs
@@ -14,6 +14,7 @@
 
     <link href="/bootstrap.min.css" rel="stylesheet">
     <link href="/cover.css" rel="stylesheet">
+    <link href="http://vjs.zencdn.net/6.2.8/video-js.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -21,50 +22,55 @@
   </head>
 
   <body>
-
     <div class="site-wrapper">
-
       <div class="site-wrapper-inner">
+        <div class="masthead clearfix">
+          <h3 class="masthead-brand">Video Facial Recognizer</h3>
+          <ul class="nav masthead-nav">
+            <li class="active">
+            	<a href="#">Home</a>
+            </li>
 
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Video Facial Recognizer</h3>
-              <ul class="nav masthead-nav">
-                <li class="active">
-                	<a href="#">Home</a>
-                </li>
-
-                <li class="active">
-                	<a href="https://github.com/kimjoe32/CS480K-Final-Project">Github</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <h1 class="cover-heading">Welcome</h1>
-            <p class="lead">This is a project for CS480K: Advanced Topics in Cloud Computing.</p>
-            <p class="lead">Upload a video file, and it will return a video with faces demarcated</p>
-            <p class="lead">Note: put a better description here</p>
-          </div>
-          <div class="mastfoot">
-            <div class="inner">
-            </div>
-          </div>
-
+            <li class="active">
+            	<a href="https://github.com/kimjoe32/CS480K-Final-Project">Github</a>
+            </li>
+          </ul>
         </div>
 
+        <div class = "row mainrow">
+          <div class="col-md-4 col1" align="center">
+            <h1 class="cover-heading">Welcome</h1>
+            <p class="lead">This is a project for CS480K: Advanced Topics in Cloud Computing.</p>
+            <p class="lead">Upload a video file, and it will return a video with demarcated faces</p>
+            <p class="lead">Note: put a better description here</p>
+            <label class="btn btn-default btn-file">
+						    Upload File <input type="file" style="display: none;">
+						</label>
+            <!-- <label class="custom-file">
+						  <input type="file" id="file2" class="custom-file-input">
+						  <span class="custom-file-control"></span>
+						</label> -->
+          </div>
+
+          <div class = "col-md-8 col2" align="center">
+            <video id="my-video" class="video-js" controls preload="auto" data-setup="{}"> <!--  poster="MY_VIDEO_POSTER.jpg"-->
+              <!-- <source src="MY_VIDEO.mp4" type='video/mp4'>
+              <source src="MY_VIDEO.webm" type='video/webm'> -->
+              <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a web browser that
+                <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+              </p>
+            </video>
+          </div>
+          <script src="http://vjs.zencdn.net/6.2.8/video.js"></script>
+        </div>
+
+        <div class="mastfoot">
+          <div class="inner">
+          </div>
+        </div>
       </div>
-
     </div>
-    <!--<head>
-		<title>Test Website</title>
-		<script type="text/javascript" src="/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="/bootstrap.min.css"/>
-	</head> -->
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
