--- a/website/views/home.ejs
+++ b/website/views/home.ejs
@@ -15,6 +15,7 @@
     <link href="/bootstrap.min.css" rel="stylesheet">
     <link href="/cover.css" rel="stylesheet">
     <link href="http://vjs.zencdn.net/6.2.8/video-js.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -39,10 +40,10 @@
 
         <div class = "row mainrow">
           <div class="col-md-4 col1" align="center">
-            <h1 class="cover-heading">Welcome</h1>
-            <p class="lead">This is a project for CS480K: Advanced Topics in Cloud Computing.</p>
-            <p class="lead">Upload a video file, and it will return a video with demarcated faces</p>
-            <p class="lead">Note: put a better description here</p>
+            <h1 class="text-left welcome">Welcome</h1>
+            <p class="text-left sub">This is a project for CS480K: Advanced Topics in Cloud Computing.</p>
+            <p class="text-left sub">Upload a video file, and it will return a video with demarcated faces</p>
+            <p class="text-left sub">Note: put a better description here</p>
             <label class="btn btn-default btn-file">
 						    Upload File <input type="file" style="display: none;">
 						</label>
