--- a/website/public/cover.css
+++ b/website/public/cover.css
@@ -1,8 +1,3 @@
-/** {
-  border: 1px solid red;
-}*/
-
-
 
 /*
  * Globals
@@ -14,17 +9,6 @@ a:focus,
 a:hover {
   color: #fff;
 }
-
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
-}
-
 
 /*
  * Base structure
@@ -54,10 +38,8 @@ body {
   display: table-cell;
   vertical-align: top;
   font-family: 'Karla', sans-serif;
-  text-shadow: 0 4px 4px rgba(0,0,0,1);
+  /*text-shadow: 0 4px 4px rgba(0,0,0,1);*/
 }
-
-
 
 /*
  * Header
@@ -121,19 +103,13 @@ body {
   height: 75%;
 }
 
-
-
 /*
  * col1
  */
 
 .col1 {
-  padding: 0px 30px 0px 30px;
+  padding: 0px 0px 0px 30px;
   align-items: center;
-}
-.col1 .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
 }
 .welcome {
   font-size: 300%;
@@ -151,31 +127,38 @@ body {
   color: #999; /* IE8 proofing */
   color: rgba(255,255,255,.5);
 }
-.btn-file {
-    position: relative;
-    overflow: hidden;
+
+#video-file {
+  font-size: 20px;
+  font-family: 'Karla', sans-serif;
+  text-align: right; 
 }
-.btn-file input[type=file] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
-    text-align: right;
-    font-family: 'Karla', sans-serif;
-    text-shadow: 0 2px 3px rgba(0,0,0,1);
-    filter: alpha(opacity=0);
-    opacity: 0;
-    outline: none;
-    background: white;
-    cursor: inherit;
-    display: block;
+.upload-btn {
+  margin-top:5px;
+  border-color:#ffffff;
+  text-shadow: 0 2px 3px rgba(0,0,0,1);
+  font-size: 15px; 
+  font-family: 'Karla', sans-serif;
+  background-color : #bbbbbb;
+}
+
+.demo {
+  margin-top: 5px;
+  background-color: #ffffff;
 }
 /*
  * Affix and center
  */
-
+@media (min-width: 350px) and (max-width: 767px)
+{
+  .clearfix {
+    /*margin: middle !important;*/
+  }
+  .masthead-nav {
+    /*padding-left:30px;*/
+    align-content: center;
+  }
+}
 @media (min-width: 768px) {
   /* Pull out the header and footer */
   .masthead {
@@ -203,4 +186,3 @@ body {
     width: 95%;
   }
 }
-*/
