--- a/website/views/home.ejs
+++ b/website/views/home.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -52,6 +51,7 @@
             <p class="text-left sub">This is a project for CS480K: Advanced Topics in Cloud Computing.
             Upload a video file, and it will return a video with demarcated faces
             Note: put a better description here</p>
+
             <!-- <input type="file" name="Choose File" id="myFile" size="50"> -->
             <label class="custom-file">
               <input type="file" name="Choose File" id="video-file" class="custom-file-input">
@@ -61,13 +61,30 @@
 						  <input type="file" id="file2" class="custom-file-input">
 						  <span class="custom-file-control"></span>
 						</label> -->
+
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" 
+                      type="button" 
+                      id="dropdownMenuButton" 
+                      data-toggle="dropdown" 
+                      aria-haspopup="true" 
+                      aria-expanded="false">
+                Number of Cores (optional)
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item">1</a>
+                <a class="dropdown-item">2</a>
+                <a class="dropdown-item">3</a>
+              </div>
+            </div>
+
             <input class="btn btn-primary upload-btn" type="button" id="upload-btn" value="Upload">
-            <p id="demo"></p>
+            <p id="filePath"></p>
           </div>
 
           <div class = "col-md-8 col2" align="center">
             <video id="my-video" class="video-js" controls preload="auto" data-setup="{}"> 
-              <!--  poster="MY_VIDEO_POSTER.jpg"-->
+              <!--  poster="MY_VIDEO_POSTER.jspg"-->
               <!-- <source src="MY_VIDEO.mp4" type='video/mp4'>
               <source src="MY_VIDEO.webm" type='video/webm'> -->
               <p class="vjs-no-js">
@@ -89,17 +106,31 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="/bootstrap.min.js"></script>
+
     <script type="text/javascript">
       var uploadEventListener = document.getElementById("upload-btn");
       uploadEventListener.addEventListener("click", uploadFile, false);
 
+      var numberOfCores;
       function uploadFile() 
       {
-        var x = document.getElementById("video-file").value;
-        $('#demo').html(x);
+        //get the filepath
+        var filepath = $("#video-file").val();
+        // $('#filePath').html(filepath);
+
+        //get the number of cores
+        // $('#filePath').html(numberOfCores);
       }
+
+      //event for number of cores dropdown option
+      $('.dropdown-item').click(function() 
+      {
+        numberOfCores = $(this).text();
+      });
     </script>
   </body>
 
