--- a/website/public/cover.css
+++ b/website/public/cover.css
@@ -1,3 +1,8 @@
+/** {
+  border-style: solid;
+  border-width: 1px;
+  border-color: red;
+}*/
 
 /*
  * Globals
@@ -146,6 +151,10 @@ body {
   margin-top: 5px;
   background-color: #ffffff;
 }
+
+.footer {
+  position: absolute;
+}
 /*
  * Affix and center
  */
@@ -183,6 +192,6 @@ body {
 @media (min-width: 992px) {
   .masthead,
   .mastfoot {
-    width: 95%;
+    width: 100%;
   }
 }
